--- a/currency_converter.html
+++ b/currency_converter.html
@@ -19,7 +19,7 @@
         <div class="container">
             <div class="intro">
                 <h2 class="text-center">Currency Converter</h2>
-                <p class="text-center">Nunc luctus in metus eget fringilla. Aliquam sed justo ligula. Vestibulum nibh erat, pellentesque ut laoreet vitae. </p>
+                <p class="text-center">This is a fun app I created for my travel to Vietnam. The app and UI is made in a way so that I can quickly check how much a product is in MMK without any internet.</p>
             </div>
             <div class="row photos" data-bss-baguettebox="">
                 <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="assets/img/desk.jpg"><img class="img-fluid" src="assets/img/Screenshot_2020-08-15-12-26-42-873_com.example.usvietmyan.jpg"></a></div>
