--- a/gold_quality_calculator.html
+++ b/gold_quality_calculator.html
@@ -19,7 +19,7 @@
         <div class="container">
             <div class="intro">
                 <h2 class="text-center">Gold Quality Calculator</h2>
-                <p class="text-center">Nunc luctus in metus eget fringilla. Aliquam sed justo ligula. Vestibulum nibh erat, pellentesque ut laoreet vitae. </p>
+                <p class="text-center">his is a custom made calculation tool for my relative. It gave the user so much value. Now regarded as an essential tool.</p>
             </div>
             <div class="row photos" data-bss-baguettebox="">
                 <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="assets/img/desk.jpg"><img class="img-fluid" src="assets/img/Screenshot_2020-08-15-12-11-59-022_com.example.goldbrowncalculatorv2.jpg"></a></div>
