--- a/index.html
+++ b/index.html
@@ -47,38 +47,38 @@
             <div class="row justify-content-center features">
                 <div class="col-sm-6 col-md-5 col-lg-4 item">
                     <div class="text-end text-white border rounded box" style="background: rgb(234,234,234);">
-                        <h3 class="text-center text-success name">Vocabulary App</h3>
-                        <p class="text-start text-dark description">aboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non&nbsp;<br></p><a class="text-end learn-more" href="vocabulary.html">Learn more »</a>
+                        <h3 class="text-center text-success name">Vocabulary App, Kotlin</h3>
+                        <p class="text-start text-dark description">This vocabulary is a great exercise between data hadling in the back. The app let user choose a selection of books. Then user will learn 5 words per day eventually learning all vocabs.<br></p><a class="text-end learn-more" href="vocabulary.html">Learn more »</a>
                     </div>
                 </div>
                 <div class="col-sm-6 col-md-5 col-lg-4 item">
                     <div class="text-end text-white border rounded box" style="background: rgb(234,234,234);">
-                        <h3 class="text-center text-success name">Rapport</h3>
-                        <p class="text-start text-dark description">laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non&nbsp;<br></p><a class="learn-more" href="rapport.html">Learn more »</a>
+                        <h3 class="text-center text-success name">Social Media Clone</h3>
+                        <p class="text-start text-dark description">This is an clone of social media app like facebook. User can upload both text and photo. This is a strong exercise for handling live data, authentication, caching and pagination with Google firebase.<br></p><a class="learn-more" href="rapport.html">Learn more »</a>
                     </div>
                 </div>
                 <div class="col-sm-6 col-md-5 col-lg-4 item">
                     <div class="text-end text-white border rounded box" style="background: rgb(234,234,234);">
-                        <h3 class="text-center text-success name">Currency Converter V2</h3>
-                        <p class="text-start text-dark description">laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non&nbsp;<br></p><a class="learn-more" href="currency_converter_v2.html">Learn more »</a>
+                        <h3 class="text-center text-success name">Currency Converter V2, Java</h3>
+                        <p class="text-start text-dark description">This is a huge improvement on previous converter app with 4 additional currency. This is also mainly a UI centric project.<br><br></p><a class="learn-more" href="currency_converter_v2.html">Learn more »</a>
                     </div>
                 </div>
                 <div class="col-sm-6 col-md-5 col-lg-4 item">
                     <div class="text-end text-white border rounded box" style="background: rgb(234,234,234);">
-                        <h3 class="text-center text-success name">Currency Converter</h3>
-                        <p class="text-start text-dark description">laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non&nbsp;<br></p><a class="learn-more" href="currency_converter.html">Learn more »</a>
+                        <h3 class="text-center text-success name">Currency Converter, Java</h3>
+                        <p class="text-start text-dark description">This is a fun app I created for my travel to Vietnam. The app and UI is made in a way so that I can quickly check how much a product is in MMK without any internet.<br></p><a class="learn-more" href="currency_converter.html">Learn more »</a>
                     </div>
                 </div>
                 <div class="col-sm-6 col-md-5 col-lg-4 item">
                     <div class="text-end text-white border rounded box" style="background: rgb(234,234,234);">
-                        <h3 class="text-center text-success name">Gold Quality Calculator</h3>
-                        <p class="text-start text-dark description">laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non&nbsp;<br></p><a class="text-end learn-more" href="gold_quality_calculator.html">Learn more »</a>
+                        <h3 class="text-center text-success name">Gold Quality Calculator,Java</h3>
+                        <p class="text-start text-dark description">his is a custom made calculation tool for my relative. It gave the user so much value. Now regarded as an essential tool.<br /><br></p><a class="text-end learn-more" href="gold_quality_calculator.html">Learn more »</a>
                     </div>
                 </div>
                 <div class="col-sm-6 col-md-5 col-lg-4 item">
                     <div class="text-end text-white border rounded box" style="background: rgb(234,234,234);">
-                        <h3 class="text-center text-success name">Khongso Hymnal</h3>
-                        <p class="text-start text-dark description">laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non&nbsp;<br></p><a class="text-end learn-more" href="khongso_hymnal.html">Learn more »</a>
+                        <h3 class="text-center text-success name">Khongso Hymnal, Java,Html</h3>
+                        <p class="text-start text-dark description">This is a database tool with lyrics for hundreds of Christian Songs. In this app, I have used both html and android Java to fill over 100 songs in the database with ease.<br></p><a class="text-end learn-more" href="khongso_hymnal.html">Learn more »</a>
                     </div>
                 </div>
             </div>
