--- a/rapport.html
+++ b/rapport.html
@@ -19,7 +19,7 @@
         <div class="container">
             <div class="intro">
                 <h2 class="text-center">Rapport</h2>
-                <p class="text-center">Nunc luctus in metus eget fringilla. Aliquam sed justo ligula. Vestibulum nibh erat, pellentesque ut laoreet vitae. </p>
+                <p class="text-center">This is an clone of social media app like facebook. User can upload both text and photo. This is a strong exercise for handling live data, authentication, caching and pagination with Google firebase.</p>
             </div>
             <div class="row photos" data-bss-baguettebox="">
                 <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="assets/img/desk.jpg"><img class="img-fluid" src="assets/img/Screenshot_2020-08-15-12-13-25-125_com.example.rapportalpha10.jpg"></a></div>
