--- a/currency_converter_v2.html
+++ b/currency_converter_v2.html
@@ -19,7 +19,7 @@
         <div class="container">
             <div class="intro">
                 <h2 class="text-center">Currency Converter V2</h2>
-                <p class="text-center">Nunc luctus in metus eget fringilla. Aliquam sed justo ligula. Vestibulum nibh erat, pellentesque ut laoreet vitae. </p>
+                <p class="text-center">This is a huge improvement on previous converter app with 4 additional currency. This is also mainly a UI centric project.</p>
             </div>
             <div class="row photos" data-bss-baguettebox="">
                 <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="assets/img/desk.jpg"><img class="img-fluid" src="assets/img/Screenshot_2020-08-15-12-33-29-668_com.example.currencyconverter.jpg"></a></div>
