--- a/khongso_hymnal.html
+++ b/khongso_hymnal.html
@@ -19,7 +19,7 @@
         <div class="container">
             <div class="intro">
                 <h2 class="text-center">Khongso Hymnal</h2>
-                <p class="text-center">Nunc luctus in metus eget fringilla. Aliquam sed justo ligula. Vestibulum nibh erat, pellentesque ut laoreet vitae. </p>
+                <p class="text-center">This is a database tool with lyrics for hundreds of Christian Songs. In this app, I have used both html and android Java to fill over 100 songs in the database with ease.</p>
             </div>
             <div class="row photos" data-bss-baguettebox="">
                 <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="assets/img/desk.jpg"><img class="img-fluid" src="assets/img/Screenshot_2020-08-15-12-51-04-267_com.example.broahlemkhng.jpg"></a></div>
