--- a/vocabulary.html
+++ b/vocabulary.html
@@ -19,7 +19,7 @@
         <div class="container">
             <div class="intro">
                 <h2 class="text-center">Vocabulary App</h2>
-                <p class="text-center">Nunc luctus in metus eget fringilla. Aliquam sed justo ligula. Vestibulum nibh erat, pellentesque ut laoreet vitae. </p>
+                <p class="text-center">This vocabulary is a great exercise between data hadling in the back. The app let user choose a selection of books. Then user will learn 5 words per day eventually learning all vocabs.</p>
             </div>
             <div class="row photos" data-bss-baguettebox="">
                 <div class="col-sm-6 col-md-4 col-lg-3 item"><a href="assets/img/desk.jpg"><img class="img-fluid" src="assets/img/vocabulary_photo.jpg"></a></div>
